...

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:text="Free"
            android:id="@+id/cardObjectStatus"
            android:layout_marginTop="10dp"
            android:layout_marginStart="10dp"
            android:layout_marginBottom="10dp"
            app:layout_constraintStart_toEndOf="@id/objectIMage"
            app:layout_constraintTop_toBottomOf="@id/cardObjectCategory"/>

...
            android:text="Удалить"
            style="?attr/borderlessButtonStyle"
            app:layout_constraintStart_toEndOf="@id/objectIMage"
            app:layout_constraintTop_toBottomOf="@id/cardObjectStatus"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/editObjectButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Изменить"
            android:layout_marginTop="5dp"
            style="?attr/borderlessButtonStyle"
            app:layout_constraintStart_toEndOf="@id/deleteObjectButton"
...
