...
    </androidx.cardview.widget.CardView>




    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
        android:id="@+id/addContractButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:layout_marginEnd="10dp"
        android:text="Добавить договор"
        android:textSize="12sp"
...
